# toxic-tweets

./: README.md  accuracy.ipynb  index.html  index.md  notebook.ipynb  sync.yaml
streamlit/toxic-tweets/: pyproject.toml  tweet.txt
streamlit/toxic-tweets/toxic_tweets/: app.py
