[tool.poetry]
name = "toxic-tweets"
version = "0.1.0"
description = ""
authors = ["Sachin Iyer <sachinjiyer@gmail.com>"]
readme = "README.md"
packages = [{include = "toxic_tweets"}]

[tool.poetry.dependencies]
python = "^3.8, <3.9.7"
streamlit = "^1.20.0"
numpy = "^1.24.2"
transformers = "^4.27.4"
torch = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
